# fennec

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: mirror-codeberg.yml  test-and-build.yml
apps/cti_api/: Cargo.toml  Makefile
apps/cti_api/src/: lib.rs  main.rs
apps/cti_api/src/health/: get.rs
apps/cti_api/src/source/: mod.rs
apps/cti_api/src/source/controllers/: delete.rs  get.rs  post.rs  put.rs
apps/cti_api/src/source/request_dtos/: create_source_request.rs  mod.rs  update_source_request.rs
docs/: ADDING_AN_APP.md  ADDING_A_BOUNDED_CONTEXT.md  ARCHITECTURE.md  CQRS.md  DOMAIN_EVENTS.md  PROJECT_STRUCTURE.md  TESTING.md
libs/kernel/: Cargo.toml
libs/kernel/src/source/application/: mod.rs
libs/kernel/src/source/application/create_source/: create_source_command.rs  create_source_command_handler.rs  create_source_response.rs  mod.rs  source_creator.rs
libs/kernel/src/source/application/delete_source/: delete_source_command.rs  delete_source_command_handler.rs  delete_source_response.rs  mod.rs  source_deleter.rs
libs/kernel/src/source/application/find_source/: find_source_query.rs  find_source_query_handler.rs  find_source_response.rs  mod.rs  source_finder.rs
libs/kernel/src/source/application/update_source/: mod.rs  (+4 more)
tests/apps/cti_api/src/: mod.rs
tests/apps/cti_api/src/health/: health_test.rs
tests/apps/cti_api/src/source/: create_source_test.rs  delete_source_test.rs  find_source_test.rs  mod.rs  update_source_test.rs
tests/libs/kernel/src/: mod.rs
tests/libs/kernel/src/mocks/: mod.rs  source_repository_mock.rs
(+37 files in other folders)
